--- a/Html/index.html
+++ b/Html/index.html
@@ -34,10 +34,35 @@
         </ul>
       </div>
       <div class="col-10">
-       <p>Real Madrid, es una entidad polideportiva con sede en Madrid, España. Fue oficialmente registrada como club de fútbol por sus socios el 6 de marzo de 1902 con el objeto de la práctica y desarrollo de este deporte, si bien sus orígenes datan del año 1900,​ y su denominación de (Sociedad) Madrid Foot-ball Club de octubre de 1901, siendo el quinto club fundado en la capital. Tuvo a Julián Palacios y los hermanos Juan Padrós y Carlos Padrós como principales valedores de su creación. </p>
-
+       <p>Real Madrid, es una entidad polideportiva con sede en Madrid, España. Fue oficialmente registrada como club de fútbol por sus socios el 6 de marzo de 1902 con el objeto de la práctica y desarrollo de este deporte, si bien sus orígenes datan del año 1900,​ y su denominación de (Sociedad) Madrid Foot-ball Club de octubre de 1901, siendo el quinto club fundado en la capital. Tuvo a Julián Palacios y los hermanos Juan Padrós y Carlos Padrós como principales valedores de su creación. Para saber mas da click <a href="https://www.realmadrid.com/sobre-el-real-madrid/historia">aqui</a>.</p>
+       <section id="real-madrid-players">
+        <h2>Jugadores Actuales</h2>
+        <ul>
+            <li>Thibaut Courtois</li>
+            <li>Dani Carvajal</li>
+            <li>Eder Militão</li>
+            <li>David Alaba</li>
+            <li>Antonio Rudiger</li>
+            <li>Toni Kroos</li>
+            <li>Luka Modrić</li>
+            <li>Federico Valverde</li>
+            <li>Jude Bellingham</li>
+            <li>Vinícius Júnior</li>
+            <li>Eduardo Camavinga</li>
+        </ul>
+    </section>
       </div>
     </div>
+    <br>
+    <section id="subscribe-section">
+      <h2>Para recibir informacion sobre el club</h2>
+      <form>
+          <label for="email">Correo Electrónico:</label>
+          <input type="email" id="email" name="email" placeholder="correo@ejemplo.com">
+          <button type="submit">Suscribirse</button>
+      </form>
+  </section>
+  
   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
